--- a/game.css
+++ b/game.css
@@ -6,7 +6,10 @@ body {
   background-size: cover;
 }
 .walk{
-
+width:180px;
+height:300px;
+background:url(img/player2/luffywalk.png);
+@-webkit-animation: walkback .8s steps(8) infinite;
 }
 
 #player2 {
@@ -18,6 +21,16 @@ body {
   position:absolute;
   bottom:5px;
   -webkit-animation: stand .6s steps(4) infinite;
+
+}
+
+#player1 {
+  width:112px;
+  height:300px;
+  bottom:5px;
+  position: absolute;
+  background:url(img/player1/sanjistand.png);
+  -webkit-animation: pOnestand .6s steps(4) infinite;
 }
   @-webkit-keyframes stand {
     0% 100%{
@@ -41,10 +54,19 @@ body {
 
   }
   @-webkit-keyframes crouch {
-    0% 100%{}
-    from{background-position:0px}
-    to{background-position: -564px}
+    0% 100%{animation-fill-mode: forwards}
+    from{background-position:0px;}
+    to{background-position: -564px;}
   }
-
+@-webkit-keyframes pOnestand{
+    0% 100%{background:url(img/player1/sanjistand.png);}
+    from{background-position:-448px;}
+    to{background-position:0px;}
+}
+@-webkit-keyframes pOnewalk{
+  0% 100%{background:url(img/player1/sanjiwalk.png);}
+  from{background-position: -1296px}
+  to{background-position: 0px}
+}
 
 
