--- a/game.css
+++ b/game.css
@@ -20,7 +20,7 @@ background:url(img/player2/luffywalk.png);
   display:inline-block;
   position:absolute;
   bottom:5px;
-  -webkit-animation: stand .6s steps(4) infinite;
+  animation:stand .6s steps(4) infinite;
 
 }
 
@@ -30,9 +30,9 @@ background:url(img/player2/luffywalk.png);
   bottom:5px;
   position: absolute;
   background:url(img/player1/sanjistand.png);
-  -webkit-animation: pOnestand .6s steps(4) infinite;
+  animation: pOnestand .6s steps(4) infinite;
 }
-  @-webkit-keyframes stand {
+  @keyframes stand {
     0% 100%{
         width:224px;
         height:240px;
@@ -41,29 +41,29 @@ background:url(img/player2/luffywalk.png);
     from {background-position:0px;}
     to{background-position:-904px;}
   }
-  @-webkit-keyframes walkback {
+  @keyframes walkback {
     0% 100%{width:204px, height:300px; background:url(img/player2/luffywalk.png);}
     from{background-position: 0px;}
     to{background-position:-1632px;}
 
   }
-  @-webkit-keyframes dash {
+  @keyframes dash {
     0% {width:298px;height:260px;background:url(img/player2/luffyrun.png); }
     from{background-position:0px;}
     to{background-position:-1788px;}
 
   }
-  @-webkit-keyframes crouch {
+  @keyframes crouch {
     0% 100%{animation-fill-mode: forwards}
     from{background-position:0px;}
     to{background-position: -564px;}
   }
-@-webkit-keyframes pOnestand{
+@keyframes pOnestand{
     0% 100%{background:url(img/player1/sanjistand.png);}
     from{background-position:-448px;}
     to{background-position:0px;}
 }
-@-webkit-keyframes pOnewalk{
+@keyframes pOnewalk{
   0% 100%{background:url(img/player1/sanjiwalk.png);}
   from{background-position: -1296px}
   to{background-position: 0px}
