--- a/game.css
+++ b/game.css
@@ -5,12 +5,12 @@ body {
   -o-background-size: cover;
   background-size: cover;
 }
-.walk{
+/*.walk{
 width:180px;
 height:300px;
 background:url(img/player2/luffywalk.png);
 @-webkit-animation: walkback .8s steps(8) infinite;
-}
+}*/
 
 #player2 {
   width:224px;
@@ -54,19 +54,32 @@ background:url(img/player2/luffywalk.png);
 
   }
   @keyframes crouch {
-    0% 100%{animation-fill-mode: forwards}
+    0% 100%{}
     from{background-position:0px;}
     to{background-position: -564px;}
   }
-@keyframes pOnestand{
+  @keyframes pOnestand{
     0% 100%{background:url(img/player1/sanjistand.png);}
     from{background-position:-448px;}
     to{background-position:0px;}
-}
-@keyframes pOnewalk{
+  }
+  @keyframes pOnewalk{
   0% 100%{background:url(img/player1/sanjiwalk.png);}
   from{background-position: -1296px}
   to{background-position: 0px}
-}
-
-
+  }
+  @keyframes pOnecrouch{
+  0% 100%{background:url(img/player1/sanjicrouch.png);}
+  from{background-position: -372px}
+  to{background-position: 0px}
+  }
+  @keyframes p1attack{
+    0% 100%{background:url(img/player1/sanjikick.png);}
+    from{background-position:-2142px;}
+    to{background-position:0px;}
+  }
+  @keyframes p2attack{
+    0% 100%{background:url(img/player2/luffypunch.png);}
+    from {background-position:0px}
+    to{background-position:-1250px}
+  }
