--- a/game.css
+++ b/game.css
@@ -11,36 +11,120 @@ height:300px;
 background:url(img/player2/luffywalk.png);
 @-webkit-animation: walkback .8s steps(8) infinite;
 }*/
+.hpbg1{
+  background:url(img/player1/hpbarbackgroundp1.png);
+  width:400px;
+  height:150px;
+  top:0;
+  left:0;
+  position:absolute;
+  z-index: 1;
+}
+.hpbg2{
+  background:url(img/player2/hpbarbackgroundp2.png);
+  width:400px;
+  height:150px;
+  top:0;
+  left:1050px;
+  position:absolute;
+  z-index: 1;
+}
+.p1{
+  left: 200px;
+  top:40px;
+  position:absolute;
+  font-size:20px;
+  font-family: 'Press Start 2P', cursive;
+  color:white;
+  text-shadow: 2;
+  font-size:20px;
+  z-index: 4;
+}
+.p2{
+  left: 930px;
+  top:40px;
+  position:absolute;
+  font-size:20px;
+  font-family: 'Press Start 2P', cursive;
+  color:black;
+  font-size:20px;
+  z-index: 4;
+}
+.portraitp1{
+  background:url(img/player1/sanjiart4.png);
+  width:150px;
+  height:100px;
+  background-size: 100%;
+  position:absolute;
+  top:-15px;
+  left:20px;
+  z-index: 2;
+
+}
+.portraitp2{
+   background:url(img/player2/luffyart4.png);
+  width:150px;
+  height:100px;
+  background-size: 100%;
+  top:-18px;
+  left:1260px;
+  position:absolute;
+  z-index: 2;
+}
+
+.fight{
+  width:960px;
+  height:477px;
+  background: url(img/fight.png);
+  top:70px;
+  left:250px;
+  position:absolute;
+  z-index: 5;
+}
+
 .hpbar1{
- width:0px;
- height:55px;
- background-color:red;
- position:absolute;
- padding-left:450px;
+  width:0px;
+  height:55px;
+  background-color:red;
+  position:absolute;
+  padding-left:450px;
+  border:solid 2px black;
+  top:70px;
+  border-radius:5px;
+  z-index: 1;
 }
 .hpbar2{
-width:0px;
-height:55px;
-background-color:red;
-position:absolute;
-padding-left:450px;
-
-
+  width:0px;
+  height:55px;
+  background-color:red;
+  position:absolute;
+  padding-left:450px;
+  border: solid 2px black;
+  top:70px;
+  border-radius:5px;
+  z-index:2;
 }
 .hpbarback1{
- width:0px;
- height:55px;
- background-color:yellow;
- position:absolute;
- padding-left:450px;
+  width:0px;
+  height:55px;
+  background-color:yellow;
+  position:absolute;
+  padding-left:450px;
+  top:70px;
+  border-radius:5px;
+  z-index: 3;
 }
 .hpbarback2{
-width:0px;
-height:55px;
-background-color:yellow;
-position:absolute;
-padding-left:450px;
+  width:0px;
+  height:55px;
+  background-color:yellow;
+  position:absolute;
+  padding-left:450px;
+  top:70px;
+  border-radius:5px;
+  z-index: 3;
 }
+
 #player2 {
   width:224px;
   height:240px;
@@ -93,14 +177,14 @@ padding-left:450px;
     to{background-position:0px;}
   }
   @keyframes pOnewalk{
-  0% 100%{background:url(img/player1/newsanjiwalk.png);}
-  from{background-position: -1296px}
-  to{background-position: 0px}
+    0% 100%{background:url(img/player1/newsanjiwalk.png);}
+    from{background-position: -1296px}
+    to{background-position: 0px}
   }
   @keyframes pOnecrouch{
-  0% 100%{background:url(img/player1/sanjicrouch.png);}
-  from{background-position: -372px}
-  to{background-position: 0px}
+    0% 100%{background:url(img/player1/sanjicrouch.png);}
+    from{background-position: -372px}
+    to{background-position: 0px}
   }
   @keyframes p1attack{
     0% 100%{background:url(img/player1/sanjikick.png);}
@@ -114,14 +198,14 @@ padding-left:450px;
   }
   @keyframes p2hit{
     0% 100%{background:url(img/player2/luffyhit.png);}
-    10%{transform: translateX(+15px);}
+    10%{transform: translateX(+35px);}
     from{background-position:0px;}
     to{background-position:630px;}
 
   }
   @keyframes p1hit{
     0% 100%{background:url(img/player1/sanjihit.png);}
-    10%{transform: translateX(-25px);}
+    10%{transform: translateX(-45px);}
     from{background-position: -792px}
     to{background-position: 0px}
   }
