--- a/game.css
+++ b/game.css
@@ -18,7 +18,7 @@ background:url(img/player2/luffywalk.png);
   top:0;
   left:0;
   position:absolute;
-  z-index: 1;
+  z-index: 0;
 }
 .hpbg2{
   background:url(img/player2/hpbarbackgroundp2.png);
@@ -27,13 +27,12 @@ background:url(img/player2/luffywalk.png);
   top:0;
   left:1050px;
   position:absolute;
-  z-index: 1;
+  z-index: 0;
 }
 .p1{
   left: 200px;
   top:40px;
   position:absolute;
-  font-size:20px;
   font-family: 'Press Start 2P', cursive;
   color:white;
   text-shadow: 2;
@@ -44,11 +43,22 @@ background:url(img/player2/luffywalk.png);
   left: 930px;
   top:40px;
   position:absolute;
-  font-size:20px;
   font-family: 'Press Start 2P', cursive;
   color:black;
   font-size:20px;
   z-index: 4;
+}
+.result{
+  left: 470px;
+  top:300px;
+  position:absolute;
+  font-family: 'Press Start 2P', cursive;
+  color:orange;
+  font-size:50px;
+  z-index: 4;
+  -webkit-text-stroke: 2px white;
+  animation:result .3s steps(2) infinite;
+
 }
 .portraitp1{
   background:url(img/player1/sanjiart4.png);
@@ -153,6 +163,18 @@ background:url(img/player2/luffywalk.png);
   background:url(img/player1/sanjistand.png);
   animation: pOnestand .6s steps(4) infinite;
 }
+
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1) {
+.hpbg1 .hpbg2{
+  width:350px;
+  height:100px;
+}
+
+}
   @keyframes stand {
     0% 100%{
         width:224px;
@@ -256,4 +278,10 @@ background:url(img/player2/luffywalk.png);
     0% 100%{}
     from{background-position: -760px}
     to{background-position: 0px;}
+  }
+  @keyframes result{
+    50%{
+      color:white;
+   -webkit-text-stroke: 2px orange;
+    }
   }
