--- a/game.css
+++ b/game.css
@@ -30,11 +30,11 @@ background:url(img/player2/luffywalk.png);
   z-index: 0;
 }
 .p1{
-  left: 200px;
+  left: 425px;
   top:40px;
   position:absolute;
   font-family: 'Press Start 2P', cursive;
-  color:white;
+  color:black;
   text-shadow: 2;
   font-size:20px;
   z-index: 4;
