--- a/style.css
+++ b/style.css
@@ -56,3 +56,28 @@ label{
   top:30%;
   left: 35%;
 }
+p{
+  text-align:center;
+  color:white;
+  width:30%;
+  top:75%;
+  left:33%;
+  position: absolute;
+  text-shadow: 2px 2px black;
+  font-family: 'Arial';
+}
+@media only screen
+  and (min-device-width: 768px)
+  and (max-device-width: 1024px)
+  and (orientation: portrait)
+  and (-webkit-min-device-pixel-ratio: 1) {
+  p{
+    left:400px;
+    position:absolute;
+  }
+  .boxcontent{
+  position:absolute;
+  top:30%;
+  left: 32%;
+}
+}
