--- a/game.css
+++ b/game.css
@@ -11,7 +11,7 @@ height:300px;
 background:url(img/player2/luffywalk.png);
 @-webkit-animation: walkback .8s steps(8) infinite;
 }*/
-.hpbg1{
+.hpbg{
   background:url(img/player1/hpbarbackgroundp1.png);
   width:400px;
   height:150px;
@@ -19,6 +19,8 @@ background:url(img/player2/luffywalk.png);
   left:0;
   position:absolute;
   z-index: 0;
+  display: flex;
+  justify-content: space-between;
 }
 .hpbg2{
   background:url(img/player2/hpbarbackgroundp2.png);
